--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>testng</artifactId>
             <version>6.10</version>
         </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.1</version>
+        </dependency>
 
     </dependencies>
 
